--- a/SmartHome.fr/index.html
+++ b/SmartHome.fr/index.html
@@ -17,6 +17,7 @@
         <meta name="twitter:description" content="Protégez et connectez votre maison avec AzurShield.fr. Solutions de sécurité et de domotique de haute qualité.">
         <meta name="twitter:image" content="images/smart_home_control.png">
         <link rel="canonical" href="https://azurshield.fr/">
+        <link rel="icon" href="images/favicon.png" type="image/png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="style.css">
         <script type="application/ld+json">
@@ -62,7 +63,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="logo">
-                    <a href="#home"><img src="images/logo.png" alt="AzurShield.fr Logo"></a>
+                    <a href="/"><img src="images/logo.png" alt="AzurShield.fr Logo"></a>
                 </div>
                 <div class="search-container">
                     <i class="fas fa-search search-icon"></i>
@@ -114,6 +115,8 @@
                 </div>
             </div>
         </section>
+
+        
     </main>
 
     <!-- Modal pour les détails du produit -->
