--- a/SmartHome.fr/index.html
+++ b/SmartHome.fr/index.html
@@ -155,7 +155,7 @@
     <!-- Panier -->
     <div id="cart-sidebar" class="cart-sidebar">
         <div class="cart-header">
-            <h3>Panier</h3>
+            <h3> <i class="fas fa-shopping-cart"></i> Panier</h3>
             <span class="close-cart">&times;</span>
         </div>
         <div class="cart-items" id="cart-items"></div>
