--- a/SmartHome.fr/index.html
+++ b/SmartHome.fr/index.html
@@ -19,7 +19,7 @@
         <link rel="canonical" href="https://azurshield.fr/">
         <link rel="icon" href="images/favicon.png" type="image/png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
         <script type="application/ld+json">
         {
             "@context": "https://schema.org",
@@ -48,13 +48,13 @@
                 <i class="fas fa-truck"></i>
                 <span class="top-bar-text">Livraison gratuite dès 50€</span>
             </span>
-            <span class="top-bar-item" id="satisfaction-guarantee">
-                <i class="fas fa-money-bill"></i>
-                <span class="top-bar-text">Payez en plusieurs fois avec Stripe !</span>
-            </span>
             <span class="top-bar-item" id="phone-contact">
                 <i class="fas fa-phone-alt"></i>
                 <span class="top-bar-text">04 51 68 09 90</span>
+            </span>
+            <span class="top-bar-item" id="satisfaction-guarantee">
+                <i class="fa-solid fa-s"></i>
+                <span class="top-bar-text">Payez en plusieurs fois avec Stripe !</span>
             </span>
         </div>
     </div>
@@ -202,6 +202,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
