--- a/SmartHome.fr/product.html
+++ b/SmartHome.fr/product.html
@@ -6,7 +6,7 @@
     <title>AzurShield.fr | Produit</title>
     <link rel="icon" href="images/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
@@ -48,7 +48,7 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="layout.js"></script>
-    <script src="product.js"></script>
+    <script src="js/layout.js"></script>
+    <script src="js/product.js"></script>
 </body>
 </html>
