--- a/SmartHome.fr/index.html
+++ b/SmartHome.fr/index.html
@@ -59,26 +59,7 @@
         </div>
     </div>
 
-    <header>
-        <nav class="navbar">
-            <div class="nav-container">
-                <div class="logo">
-                    <a href="/"><img src="images/logo.png" alt="AzurShield.fr Logo"></a>
-                </div>
-                <div class="search-container">
-                    <i class="fas fa-search search-icon"></i>
-                    <input type="search" id="search-bar" placeholder="Rechercher un produit...">
-                    <div class="search-suggestions" id="search-suggestions"></div>
-                </div>
-                <div class="cart-icon" onclick="toggleCart()">  
-                    <span class="cart-icon" id="cart-icon">
-                        <i class="fas fa-shopping-cart"></i>
-                    </span>
-                    <span class="cart-count" id="cart-count">0</span>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div id="navbar-placeholder"></div>
 
     <main>
         <section id="home" class="hero">
@@ -119,53 +100,9 @@
         
     </main>
 
-    <!-- Modal pour les détails du produit -->
-    <div id="product-modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <div id="modal-body"></div>
-        </div>
-    </div>
+    <div id="modals-placeholder"></div>
 
-    <!-- Modale d'ajout au panier -->
-    <div id="cart-modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <div id="cart-modal-body" class="cart-modal-body">
-                <div class="cart-modal-message">
-                    <i class="fas fa-check-circle"></i>
-                    <p id="modal-message">Produit ajouté au panier !</p>
-                </div>
-                <div class="cart-modal-product">
-                    <img id="modal-product-image" src="" alt="Aperçu du produit">
-                    <span id="modal-product-name"></span>
-                </div>
-                <div class="cart-modal-summary">
-                    <p>Votre panier : <strong id="modal-cart-count">0 article(s)</strong></p>
-                    <p>Total : <strong id="modal-cart-total">0.00€</strong></p>
-                </div>
-                <div class="cart-modal-actions">
-                    <button id="continue-shopping-btn" class="btn-secondary">Continuer les achats</button>
-                    <button id="checkout-modal-btn" class="btn-primary">Voir le panier & Payer</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Panier -->
-    <div id="cart-sidebar" class="cart-sidebar">
-        <div class="cart-header">
-            <h3> <i class="fas fa-shopping-cart"></i> Panier</h3>
-            <span class="close-cart">&times;</span>
-        </div>
-        <div class="cart-items" id="cart-items"></div>
-        <div class="cart-footer">
-            <div class="cart-total">
-                <strong>Total: <span id="cart-total-sidebar">0€</span></strong>
-            </div>
-            <button class="checkout-btn">Commander</button>
-        </div>
-    </div>
+    <div id="cart-placeholder"></div>
 
     <footer id="contact">
         <div class="footer-container">
@@ -202,6 +139,7 @@
         </div>
     </footer>
 
+    <script src="js/layout.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
