--- a/MixAndLights/Team/index.html
+++ b/MixAndLights/Team/index.html
@@ -102,7 +102,7 @@
             docs: 'Documents',
             wireframe: 'Wireframes',
             sheets: 'Tableaux',
-            design: 'Charte Graphique',
+            design: 'Design',
             presentation: 'Présentations',
             trello: 'Gestion de Projet'
         };
