--- a/MixAndLights/index.html
+++ b/MixAndLights/index.html
@@ -6,12 +6,15 @@
     <title>Mix And Lights</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
-    
 </head>
 <body>
+    <!-- Start Loader Section -->
     <div id="loader">
         <img src="images/logo-big.svg" alt="Loading...">
     </div>
+    <!-- End Loader Section -->
+
+    <!-- Start Header Section -->
     <header>
         <div class="navbar-top-gradient"></div>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -66,7 +69,9 @@
             </div>
         </nav>
     </header>
+    <!-- End Header Section -->
 
+    <!-- Start Main Section -->
     <main>
         <video id="circle-video" autoplay muted loop playsinline>
             <source src="images/bg.mp4" type="video/mp4">
@@ -75,13 +80,16 @@
         <div id="vignette-overlay"></div>
         <img src="images/logo-big.svg" alt="Logo" id="circle-logo">
     </main>
+    <!-- End Main Section -->
 
+    <!-- Start Scene 2 Section -->
     <section id="scene2">
         <div>
             <h1 class="slogan">Shine Bright</h1>
             <p class="description">Spécialistes de la musique, du son et de la lumière, nous mettons notre expertise au service de vos événements. De la conception lumière aux effets spéciaux, en passant par la sonorisation, nous créons des ambiances uniques et mémorables.</p>
         </div>
     </section>
+    <!-- End Scene 2 Section -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="Scripts/loader.js"></script>
