--- a/MixAndLights/index.html
+++ b/MixAndLights/index.html
@@ -62,8 +62,8 @@
                                 Langue
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="langueDropdown">
-                                <li><a class="dropdown-item" href="#"><img src="https://flagcdn.com/w20/fr.png" class="flag-icon" alt="French Flag">Français</a></li>
-                                <li><a class="dropdown-item" href="#"><img src="https://flagcdn.com/w20/gb.png" class="flag-icon" alt="English Flag">Anglais</a></li>
+                                <li><a class="dropdown-item" href="#"><img src="images/FlagFR.png" class="flag-icon" alt="French Flag">Français</a></li>
+                                <li><a class="dropdown-item" href="#"><img src="images/FlagGB.png" class="flag-icon" alt="English Flag">Anglais</a></li>
                             </ul>
                         </li>
                     </ul>
