--- a/YnovTeamRes/GreenFeather/index.html
+++ b/YnovTeamRes/GreenFeather/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,7 +35,7 @@
             margin-bottom: 80px;
         }
         .resource-group h2 {
-            font-family: 'Poppins', sans-serif;
+            font-family: Popp;
             text-transform: capitalize;
             padding-bottom: 10px;
             margin-bottom: 20px;
