--- a/YnovTeamRes/GreenFeather/index.html
+++ b/YnovTeamRes/GreenFeather/index.html
@@ -12,7 +12,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #1a1a1a;
+            background-color: #001A23;
             color: #fff;
             margin: 0;
             padding: 20px;
@@ -25,7 +25,7 @@
             margin-bottom: 40px;
         }
         .logo {
-            max-width: 300px;
+            max-height: 100px;
         }
         #resources-container {
             width: 100%;
@@ -49,7 +49,7 @@
             justify-content: center;
         }
         .resource-button {
-            border: 2px solid #444;
+            border: 2px solid #15262B;
             border-radius: 10px;
             color: #fff;
             padding: 20px;
@@ -57,12 +57,11 @@
             display: flex;
             align-items: center;
             transition: box-shadow 0.2s;
-            background-color: #222;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            background-color: transparent;
             max-width: 300px;
         }
         .resource-button:hover {
-            box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+            background-color: #001D26;
         }
         .resource-button.disabled {
             opacity: 0.5;
