--- a/YnovTeamRes/GreenFeather/index.html
+++ b/YnovTeamRes/GreenFeather/index.html
@@ -34,8 +34,12 @@
         .resource-group {
             margin-bottom: 80px;
         }
+        @font-face {
+            font-family: 'Rosehot';
+            src: url('Rosehot.ttf') format('truetype');
+        }
         .resource-group h2 {
-            font-family: Popp;
+            font-family: 'Rosehot', sans-serif;
             text-transform: capitalize;
             padding-bottom: 10px;
             margin-bottom: 20px;
