--- a/YnovTeamRes/GreenFeather/index.html
+++ b/YnovTeamRes/GreenFeather/index.html
@@ -26,6 +26,16 @@
         }
         .logo {
             max-height: 100px;
+            animation: hue-rotate-animation 5s linear infinite;
+        }
+
+        @keyframes hue-rotate-animation {
+            0% {
+                filter: hue-rotate(0deg);
+            }
+            100% {
+                filter: hue-rotate(360deg);
+            }
         }
         #resources-container {
             width: 100%;
