--- a/YnovTeamRes/TheAxis/index.html
+++ b/YnovTeamRes/TheAxis/index.html
@@ -12,7 +12,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient( 45deg, #800020, #440011);
+            background: linear-gradient(to right, #800020, #440011);
             color: #fff;
             margin: 0;
             padding: 20px;
