--- a/smag/index.html
+++ b/smag/index.html
@@ -33,6 +33,7 @@
       <li><a href="#music" class="nav-link" data-section="music">Music</a></li>
       <li><a href="#media" class="nav-link" data-section="media">Medias</a></li>
       <li><a href="#blog" class="nav-link" data-section="blog">Blog</a></li>
+      <li><a href="#progress" class="nav-link" data-section="progress">Progress</a></li>
       <li><a href="#credits" class="nav-link" data-section="credits">Credits</a></li>
     </ul>
   </nav>
@@ -117,7 +118,23 @@
 
         <h4>© Copyright 2020-2025 SMAG Team</h4>
       </div>
-    </section>    <!-- Credits -->
+    </section>
+
+    <!-- Progress -->
+    <section id="progress" class="content-section">
+      <div class="container">
+        <h2>Progress</h2>
+        <h5 style="margin: 30px 0">Development progress of SMAG galaxies</h5>
+        
+        <div class="progress-container">
+          <!-- Progress will be loaded dynamically from JSON -->
+        </div>
+
+        <h4>© Copyright 2020-2025 SMAG Team</h4>
+      </div>
+    </section>
+
+    <!-- Credits -->
     <section id="credits" class="content-section">
       <div class="container credit">
         <h2>Credits</h2>
