--- a/BMGE/index.html
+++ b/BMGE/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tomodachi Collection BMG Translator</title>
+  <title>L-Dev's BMG Editor</title>
+  <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
   <header class="page-header">
     <img src="logo.png" alt="Logo" style="height: 300px; width: auto; display: block; margin: 0 auto;">
-    <h1>Tomodachi Collection BMG Translator</h1>
+    <h1>BMG Editor</h1>
     <p class="tagline">Load a .bmg file, review each entry, adjust the text, and export a patched archive without breaking the original offsets.</p>
   </header>
   <main>
