--- a/BMGE/index.html
+++ b/BMGE/index.html
@@ -21,6 +21,7 @@
         <input id="file-input" type="file" accept=".bmg" hidden>
         <span id="file-label">No file selected</span>
       </div>
+      <div id="file-warning"></div>
       <div class="meta" id="file-meta"></div>
       <div class="controls">
         <input id="search" type="search" placeholder="Filter by text, index, or offset" disabled>
@@ -32,6 +33,10 @@
           <label class="filter-checkbox">
             <input type="checkbox" id="filter-mid" checked>
             <span>MID1</span>
+          </label>
+          <label class="filter-checkbox">
+            <input type="checkbox" id="filter-empty">
+            <span>Empty</span>
           </label>
         </div>
         <div class="spacer"></div>
