--- a/BMGE/index.html
+++ b/BMGE/index.html
@@ -35,6 +35,14 @@
             <span>MID1</span>
           </label>
           <label class="filter-checkbox">
+            <input type="checkbox" id="filter-sequenced" checked>
+            <span>Sequenced</span>
+          </label>
+          <label class="filter-checkbox">
+            <input type="checkbox" id="filter-scrolling" checked>
+            <span>Scrolling</span>
+          </label>
+          <label class="filter-checkbox">
             <input type="checkbox" id="filter-empty">
             <span>Empty</span>
           </label>
@@ -82,6 +90,6 @@
     </article>
   </template>
 
-  <script type="module" src="app.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
