--- a/smag/index.html
+++ b/smag/index.html
@@ -18,13 +18,8 @@
 </head>
 <body>
   
-  <!-- Video Background -->
-  <div id="video-background">
-    <video id="bg-video" autoplay loop muted>
-      <source src="Images/BG.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
+  <!-- Image Background -->
+  <div id="video-background"></div>
     
   <!-- Navbar -->
   <img src="Images/logo.png" height="300px" class="logo">  <nav>
