--- a/Stock/index.html
+++ b/Stock/index.html
@@ -15,6 +15,7 @@
             <div class="profile-info">
                 <h1>Mr Léo TOSKU</h1>
                 <p>Total actions possédées: <span id="total-shares">0</span></p>
+                <p>Investissement total: <span id="total-investment">-- €</span></p>
             </div>
         </div>
         <h3 class="sidebar-section-title">Mon Portefeuille</h3>
@@ -101,19 +102,19 @@
                 <h3 class="section-title details-title">Details</h3>
                 <div class="info-grid">
                     <div class="info-item">
-                        <div class="info-label">Ouverture</div>
+                        <div class="info-label">Ouverture (Open)</div>
                         <div class="info-value" id=""></div>
                     </div>
                     <div class="info-item">
-                        <div class="info-label">Plus Haut</div>
+                        <div class="info-label">Plus Haut (High)</div>
                         <div class="info-value" id=""></div>
                     </div>
                     <div class="info-item">
-                        <div class="info-label">Plus Bas</div>
+                        <div class="info-label">Plus Bas (Low)</div>
                         <div class="info-value" id=""></div>
                     </div>
                     <div class="info-item">
-                        <div class="info-label">Clôture Préc.</div>
+                        <div class="info-label">Clôture (Close)</div>
                         <div class="info-value" id=""></div>
                     </div>
                 </div>
